--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  
 
   <div class="hero">
-    <h1>Bienvenido a <br> Colo Vitale musica</h1>
+    <h1>Bienvenido a <br> Colo Música</h1>
     <h2>Vas a poder aprender a tocar el instrumento que quieras en donde quieras</h2>
   </div>
 
@@ -26,7 +26,7 @@
     </div>
     <div class="course">
         <div class="course-image" style="background-image: url('img/bat.png');"></div>
-        <p>Batería</p>
+        <p>Redes sociales para musicos</p>
     </div>
     <div class="course">
         <div class="course-image" style="background-image: url('img/bajo.png');"></div>
@@ -34,7 +34,7 @@
     </div>
     <div class="course">
         <div class="course-image" style="background-image: url('img/guits.png');"></div>
-        <p>Ensamble de guitarra</p>
+        <p>Grabar tus temas</p>
       </div>
   </div>
 
