--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 <body>
  
-
   <div class="hero">
-    <h1>Bienvenido a <br> Colo Música</h1>
-    <h2>Vas a poder aprender a tocar el instrumento que quieras en donde quieras</h2>
-  </div>
+    <div class="text-container">
+        <h1>Bienvenido a <br> Colo Música</h1>
+        <h2>Una plataforma para aprender música y divertirse</h2>
+    </div>
+</div>
 
-  <h3>Cursos populares</h3>
+  <h3>Cursos</h3>
   <div class="courses">
     <div class="course">
       <div class="course-image" style="background-image: url('img/guit.png');"></div>
@@ -29,24 +30,25 @@
         <p>Redes sociales para musicos</p>
     </div>
     <div class="course">
+      <div class="course-image" style="background-image: url('img/mic.png'); " ></div>
+      <p>Grabar tus temas</p>
+    </div>
+    <div class="course">
         <div class="course-image" style="background-image: url('img/bajo.png');"></div>
       <p>Primeros pasos en el bajo</p>
     </div>
-    <div class="course">
-        <div class="course-image" style="background-image: url('img/guits.png');"></div>
-        <p>Grabar tus temas</p>
-      </div>
-  </div>
 
-  <button class="cta-button">
+  </div>
+    
+  <a href="inicioS.html" class="cta-button">
     <i class="fas fa-music"></i>&nbsp; Unite a la comunidad&nbsp;<i class="fas fa-music"></i>
-  </button>
+</a>
 
 
 
   <div class="sobreNosotros">
-    <h3>Nosotros</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa dignissimos quidem voluptatibus optio obcaecati accusamus quaerat provident laboriosam culpa deleniti laborum ratione, quasi sed ea, vitae et voluptate sapiente est at. Fugiat exercitationem repellat explicabo a velit nostrum quibusdam sunt necessitatibus eum, consequatur accusamus incidunt voluptate eos aperiam eveniet error dolorum dolorem. Amet sed pariatur laudantium corrupti eius sit eum a assumenda nulla nesciunt sequi est autem accusamus alias distinctio similique nobis cumque, labore dolore veritatis? Quasi laborum, temporibus quisquam molestiae, eveniet praesentium sit ad enim sunt, deserunt nisi nostrum!</p>
+    <h3>Que es esto??</h3>
+    <p>Esto es una plataforma que cree para compartir todo lo que aprendo de musica</p>
   </div>
 
 
