--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 </head>
 <body>
  
-  <div class="hero">
+<!--
+<div class="hero">
     <div class="text-container">
         <h1>Bienvenido a <br> Colo Música</h1>
         <h2>Una plataforma para aprender música y divertirse</h2>
     </div>
+</div>
+--> 
+
+<div class="inicio">
+  <img src="img/fondo.png" alt="" class="imagen-centrada">
+  <h1>Bienvenidos a<br>colo música</h1>
 </div>
 
   <h3>Cursos</h3>
