--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
 </head>
 <body>
  
-<!--
-<div class="hero">
-    <div class="text-container">
-        <h1>Bienvenido a <br> Colo Música</h1>
-        <h2>Una plataforma para aprender música y divertirse</h2>
-    </div>
-</div>
---> 
 
 <div class="inicio">
-  <img src="img/fondo.png" alt="" class="imagen-centrada">
+  <img src="img/fondohd.png" alt="" class="imagen-centrada">
   <h1>Bienvenidos a<br>colo música</h1>
 </div>
 
-  <h3>Cursos</h3>
+
+<div class="sobreNosotros">
+ <!-- <h3>Que es esto??</h3>--> 
+
+  <p>Esto es una plataforma para que aprendas musica sin sufrir.
+<br> <br>
+    Basta de miles de hojas perdidas, billones de tutoriales y trilones de tips perdidos en el ‘guardado’ de tu instagram.</p>
+</div>
+
+
+
+  <h3>Cursos que te van a servir</h3>
   <div class="courses">
     <div class="course">
       <div class="course-image" style="background-image: url('img/guit.png');"></div>
       <p>Guitarra rock nacional</p>
     </div>
     <div class="course">
-        <div class="course-image" style="background-image: url('img/bat.png');"></div>
+        <div class="course-image" style="background-image: url('img/redes.jpeg');"></div>
         <p>Redes sociales para musicos</p>
     </div>
     <div class="course">
@@ -41,8 +44,8 @@
       <p>Grabar tus temas</p>
     </div>
     <div class="course">
-        <div class="course-image" style="background-image: url('img/bajo.png');"></div>
-      <p>Primeros pasos en el bajo</p>
+        <div class="course-image" style="background-image: url('img/de0.jpeg');"></div>
+      <p>Guitarra desde 0</p>
     </div>
 
   </div>
@@ -53,10 +56,6 @@
 
 
 
-  <div class="sobreNosotros">
-    <h3>Que es esto??</h3>
-    <p>Esto es una plataforma que cree para compartir todo lo que aprendo de musica</p>
-  </div>
 
 
 
