--- a/cursos.html
+++ b/cursos.html
@@ -3,14 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>13 Notas - Todos los Cursos</title>
+    <title>Cursos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesCursos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-  
+    <h1>Cursos</h1>
+    <div class="courses" >
+        <div class="course">
+          <div class="course-image" style="background-image: url('img/guit.png');" onclick="window.location.href='guitrn.html';"></div>
+          <p>Guitarra rock nacional</p>
+        </div>
+        <div class="course">
+            <div class="course-image" style="background-image: url('img/redes.jpeg');"></div>
+            <p>Redes sociales para musicos</p>
+        </div>
+        <div class="course">
+          <div class="course-image" style="background-image: url('img/mic.png'); " ></div>
+          <p>Grabar tus temas</p>
+        </div>
+        <div class="course">
+            <div class="course-image" style="background-image: url('img/de0.jpeg');"></div>
+          <p>Guitarra desde 0</p>
+        </div>
+        <div class="course">
+            <div class="course-image" style="background-image: url('img/bajo.png');"></div>
+          <p>Empezando con el bajo</p>
+        </div>
+        <div class="course">
+            <div class="course-image" style="background-image: url('img/bombo.jpeg');"></div>
+          <p>Ensamble folklore</p>
+        </div>
+        <div class="course">
+            <div class="course-image" style="background-image: url('img/de0.jpeg');"></div>
+          <p>Guitarra desde 0</p>
+        </div>
+    
+      </div>
+        
     <footer class="footer">
         <a href="index.html" class="active">
             <div>
@@ -18,7 +50,7 @@
             </div>
             <p>Home</p>
         </a>
-        <a href="courses.html">
+        <a href="cursos.html">
             <div>
                 <i class="fas fa-music"></i>
             </div>
