--- a/inicioS.html
+++ b/inicioS.html
@@ -43,13 +43,15 @@
         <input type="password" id="password">
 
         <button class="bi">Enviar</button>
+        
+        <button onclick="showScreen('pantalla1')">Volver</button>
     </form>
-    <button onclick="showScreen('pantalla1')">Volver</button>
+   
 </div>
 
 <!-- Iniciar Sesión -->
-<div id="pantalla3" style="display: none;">
-    <h2>Iniciar Sesión</h2>
+<div id="pantalla3" style="display: none;" class="pantalla">
+    <h2 class="tituloRegi">Iniciar Sesión</h2>
     <form action="">
         <label for="mail">Mail: </label>
         <input type="email" id="mail" required>
@@ -57,9 +59,11 @@
         <label for="password">Contraseña:</label>
         <input type="password" id="password">
 
-        <button>Enviar</button>
+        <button class="bi">Enviar</button>
+
+        <button onclick="showScreen('pantalla1')">Volver</button>
     </form>
-    <button onclick="showScreen('pantalla1')">Volver</button>
+   
 </div>
 
 
