la pagina de guitarra va bien

--- a/guitrn.html
+++ b/guitrn.html
@@ -14,12 +14,23 @@
     <h1>Guitarra rock nacional</h1>
     <h2>¿Que vas a aprender?</h2>
 
-    <ul>
-        <li>Los mejores temas de rock nacional</li>
-        <li>Ritmos principales</li>
-        <li>Intros y arpegios</li>
+    <ul class="temario">
+        <li>
+            <span class="titulo">🎸 Primeras melodías</span> 
+            Canción para mi muerte, Música ligera, Un vestido y un amor <br>
+            Ejercicios para mejorar punteos
+        </li>
+        <li>
+            <span class="titulo">🎸 Ritmos</span> 
+            Nada es para siempre, Mientes, Ritmos básicos para acompañar canciones de rock. <br>
+            Ejercicios de rasgueo para acompañamiento y de cambios de acordes fluidos.
+        </li>
+        <li>
+            <span class="titulo">🎸 Riffs e intros</span> 
+            Rezo por vos, Seminare <br>
+            Ejercicios básicos de digitación en la escala.
+        </li>
     </ul>
-
     <button onclick="mostrarPantalla2()">Empezar</button>
 
 
@@ -33,28 +44,29 @@
       <h1>
         Guitarra rock nacional
       </h1>
-      <h2>Primeros temas</h2>
+      <h2>Primeras melodias</h2>
       <div class="progress-container">
         <!-- Línea de conexión entre las lecciones -->
         <div class="line"></div>
 
         <!-- Lección disponible -->
-        <div class="lesson available">
-            <div class="circle">1</div>
+        <div class="lesson locked">
+            <a href="guitrn/cancionparamimuerte.html"> <div class="circle">Cancion para mi muerte</div></a>
+      
         
         </div>
 
         <!-- Lección bloqueada -->
         <div class="lesson locked">
-            <div class="circle">2</div>
+            <div class="circle">Musica ligera</div>
         </div>
 
         <div class="lesson locked">
-            <div class="circle">3</div>
+            <div class="circle">Un vestido y un amor</div>
         </div>
 
         <div class="lesson locked">
-            <div class="circle">4</div>
+            <div class="circle">Ejercicios</div>
         </div>
 
 
