--- a/inicioS.html
+++ b/inicioS.html
@@ -32,7 +32,7 @@
 <!-- Registrar -->
 <div id="pantalla2" style="display: none;" class="pantalla">
     <h2 class="tituloRegi">Registrate</h2>
-    <form action="">
+    <form action="cursos.html" method="get">
         <label for="name">Nombre: </label>
         <input type="text" id="name" required>
 
@@ -52,7 +52,7 @@
 <!-- Iniciar Sesión -->
 <div id="pantalla3" style="display: none;" class="pantalla">
     <h2 class="tituloRegi">Iniciar Sesión</h2>
-    <form action="">
+    <form action="cursos.html" method="get">
         <label for="mail">Mail: </label>
         <input type="email" id="mail" required>
 
